	doc/gramps-manual/ru/keybind.xml,
	doc/gramps-manual/ru/legal.xml,
	doc/gramps-manual/ru/mainwin.xml,
	doc/gramps-manual/ru/usage.xml,
	doc/gramps-manual/ru/gramps-manual-ru.omf
	doc/gramps-manual/ru/figures,
	doc/gramps-manual/ru/figures/*.png: Add to CVS.
	* doc/gramps-manual/Makefile.am: Add ru to the SUBDIR list.
	* configure.in: Add doc/gramps-manual/ru/Makefile to AC_CONFIG_FILES.

2003-12-07  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/filters/Complete.py: Add filter matching people with the 
	complete flag.
	* src/GenericFilter.py (HasCompleteRecord): Add rule matching people 
	with the complete records. 
	* src/RelLib.py (Source.setAbbrev, Source.getAbbrev): Add functions.
	* src/WriteXML.py (write_xml_data): Save abbreviation info for sources.
	* src/GrampsParser.py (GrampsParser.stop_sabbrev): Parse abbreviation.
	* src/gramps.glade (sourceEditor): Add widgets for Call Number and 
	Abbreviation. 
	* src/EditSource.py: Support Call Number and Abbreviation. 
	* src/plugins/ReadGedcom.py (parse_source): Parse abbreviation.
	* src/plugins/WriteGedcom.py (write_sources): Export abbreviation.
	* NEWS: Update. 

2003-12-07  Don Allingham  <dallingham@users.sourceforge.net>
	* Version 0.98.0: the "Round me off" release.

2003-12-06  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py (FamilyView.really_remove_spouse): remove the
	correct person from the family when deleting the spouse

2003-12-06  Lorenzo Cappelletti  <lorenzo.cappelletti@email.it>
	* src/po/it.po: updated Italian translation

2003-12-06  Alex Roitman  <shura@alex.neuro.umn.edu>
	* doc/gramps-manual/C/figures/pedigree-child-cut.png: Add figure.
	* doc/gramps-manual/C/mainwin.xml: Add figure. 
	* FAQ, doc/gramps-manual/C/faq.xml: Add two questions. 
	* src/plugins/WriteFtree.py (on_help_clicked): Add function. 
	* doc/gramps.1: Update. 
	* src/EditPlace.py: Pass window to LocEdit.py. Correct apply callback.
	* src/LocEdit.py (__init__): Make dialog modal and transient 