@@ -19,34 +19,34 @@
 <!-- =========== Getting Started ============================== -->
 
   <sect1 id="gramps-getting-started"> 
-    <title>Getting Started</title> 
+    <title>Первые шаги</title> 
 
     <!-- ================ Getting Started Subsection ====== -->
     <sect2 id="gramps-start">
-    <title>To Start &app;</title>
-    <para>You can start &app; in the following ways:</para> 
+    <title>Запуск &app;</title>
+    <para>Вы можете запустить &app; следующими способами:</para> 
     <variablelist>
     <varlistentry>
-	<term><guimenu>Applications</guimenu> menu</term>
-	<listitem><para>Choose <menuchoice><guisubmenu>Other</guisubmenu>
+	<term>Меню <guimenu>Приложения</guimenu></term>
+	<listitem><para>Выберите <menuchoice><guisubmenu>Другое</guisubmenu>
 	<guimenuitem>Gramps</guimenuitem></menuchoice>. </para></listitem>
     </varlistentry>
     <varlistentry>
-	<term>Command line</term>
-    	<listitem><para>To start &app; from a command line, type 
-        <command>gramps</command>, then press <keycap>Return</keycap>.</para>
+	<term>Командная строка</term>
+    	<listitem><para>Чтобы запустить &app; из командной строки, наберите  
+        <command>gramps</command>, потом нажмите <keycap>Ввод</keycap>.</para>
 	
-	<para>If you would like &app; to open a specific database or to 
-        import a specific file on startup, you can supply the filename 
-        as a command line argument:</para>
+	<para>Если Вы хотите, чтобы &app; открыла или импортировала определенную базу
+	данных при старте, Вы можете задать имя файла в качестве аргумента командной
+	строки:</para>
 
 	<para>
 	<command>gramps -i</command> <replaceable>filename.ged</replaceable>
     	</para> 
 
-    	<para>where <replaceable>filename.ged</replaceable> is the name 
-	of the file you	want to open/import. The detailed reference to the 
-        command line options is found in the <xref linkend="append-cmdline"/>. 
+    	<para>где <replaceable>filename.ged</replaceable> имя файла, который вы хотите
+    	открыть/импортировать. Подробное описание опций командной строки 
+    	содержит <xref linkend="append-cmdline"/>. 
         </para></listitem>
     </varlistentry>
     </variablelist>
@@ -54,37 +54,35 @@
 
     <!-- ================ Getting Started Subsection ==== -->
     <sect2 id="run-1st-time">
-      <title>Running &app; for the first time</title>
+      <title>Первый запуск &app;</title>
     <para> 
-    The first time you run the program, GRAMPS will display its 
-    Getting Started dialogs. Follow the directions guiding you through
-    <guilabel>Researcher information</guilabel>, <guilabel>Numerical date 
-    formats</guilabel>, <guilabel>Alternate calendar support</guilabel>,
-    and <guilabel>LDS extensions</guilabel> sections. Most of the dialogs
-    are self-explanatory and will not be covered here.
-    </para>
+    Когда программа запущена в первый раз, &app; выводит свой диалог Первые Шаги.
+    Следуйте указаниям, проводящим Вас через разделы: 
+    <guilabel>Информация об исследователе</guilabel>, 
+    <guilabel>Численные форматы дат</guilabel>, <guilabel>Поддержка альтернативных 
+    календарей</guilabel> и <guilabel>Расширения LDS</guilabel>. Большинство диалогов
+    говорят сами за себя и здесь разобраны не будут.</para>
     
 	<!-- ==== Figure: Getting Started Druid Window ==== -->
 	<figure id="druid-fig"> 
-	<title>&app; Getting Started Window: Researcher Information</title> 
+	<title>Окно Первые Шаги &app;: Информация об исследователе</title> 
 	<screenshot><mediaobject><imageobject><imagedata 
 		fileref="figures/researcher.png" format="PNG"/></imageobject>
 	<textobject> 
-	<phrase>Shows Researcher Information Window. </phrase>
+	<phrase>Показывает Окно Информациии об исследователе</phrase>
 	</textobject></mediaobject></screenshot></figure>
 	<!-- ==== End of Figure ==== -->
 
-	<para>Enter your personal information in the corresponding
-	text entry fields. Although &app; requests information about you, 
-	this information is used only so that &app; can create valid GEDCOM 
-	output files. A valid GEDCOM file requires information about the file's 
-	creator. If you choose, you may leave the information empty, however
-	all the GEDCOM files you export will not be valid. 
-	</para>
+	<para>Введите Ваши личные данные в соответствующие поля ввода текста. 
+	Хотя &app; запрашивает Вашу информацию, эта информация используется только
+	для для создания корректных выходных файлов GEDCOM. Корректный файл GEDCOM 
+	требует информацию о создателе файла. Если вы хотите, Вы можете оставить 
+	эти поля незаполненными. Однако, в этом случае все GEDCOM файлы, которые Вы 
+	экспортируете, будут некорректными.</para>
 	
-	<para>This information can be entered at any time in the 
-	<guilabel>Preferences</guilabel> dialog, under the 
-	<guilabel>Usage</guilabel> category. 
+	<para>Эта информация может быть введена в любой момент, в диалоге 
+	<guilabel>Настройки</guilabel>, в категории 
+	<guilabel>Использование</guilabel>. 
 	</para>
 
     </sect2>
